# py-plugin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/greeter/: README.md  host.py  plugin.py  shared.py
examples/greeter/proto/: greeter.proto
fixtures/example_kv/: kv_plugin.py  plugin_main.py  plugin_main_for_go_host.py  plugin_main_stubborn.py  plugin_main_tcp.py  plugin_main_versioned.py  plugin_main_zombie.py
fixtures/example_kv/proto/: callback.proto  kv.proto
scripts/: gen_protos.py
src/pyplugin/: __init__.py  broker.py  client.py  controller.py  cookie.py  errors.py  handshake.py  health.py  logging_bridge.py  mtls.py  plugin.py  process.py  reattach.py  server.py  stdio.py  transport.py
src/pyplugin/_generated/: grpc_broker_grpc.py  grpc_broker_pb2.py  grpc_broker_pb2_grpc.py  grpc_controller_grpc.py  grpc_controller_pb2.py  grpc_controller_pb2_grpc.py  grpc_stdio_grpc.py  grpc_stdio_pb2.py  grpc_stdio_pb2_grpc.py
src/pyplugin/proto/: grpc_broker.proto  grpc_controller.proto  grpc_stdio.proto
tests/: conftest.py  test_broker.py  test_cookie.py  test_handshake.py  test_logging_bridge.py  test_mtls.py  test_reattach.py  test_shutdown.py  test_smoke.py  test_smoke_tcp.py  test_versioning.py
tests/interop/: test_go_host_drives_python_plugin.py  test_python_host_drives_go_plugin.py
