[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pyplugin"
version = "0.1.0"
description = "Wire-compatible Python port of HashiCorp's go-plugin"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Max Lund" }]
dependencies = [
    "grpcio>=1.60",
    "grpcio-health-checking>=1.60",
    "grpcio-reflection>=1.60",
    "protobuf>=4.25",
    "cryptography>=41",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60",
    "pytest>=7",
    "pytest-timeout>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyplugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
addopts = "-q"
