[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pyplugin"
version = "0.1.0"
description = "Wire-compatible Python port of HashiCorp's go-plugin"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Max Lund" }]
dependencies = [
    "grpclib[protobuf]>=0.4.7",
    "protobuf>=4.25",
    "cryptography>=41",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60",   # for protoc only; runtime is grpclib
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

[tool.pytest_asyncio]
mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/pyplugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
